# indonesia-supreme-court-ai-postprocess

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  cli.py  contexts.py  docker-compose.yaml  entrypoint.sh  main.py  nats_consumer.py  pyproject.toml  settings.py
src/: io.py  module.py  summarization.py  utils.py
